Fix plugin header alignment in slide view

--- a/timApp/static/stylesheets/csRun.scss
+++ b/timApp/static/stylesheets/csRun.scss
@@ -110,6 +110,7 @@ p.stem {
 
   h2, h3, h4 {
     margin-left: 0;
+    text-align: left;
   }
 
   h4 {
